<!--
 DESCRIPCION: Interfaz pantalla de ajustes.
 AUTOR: Javier Herrero Arnanz.
 VERSION: 1.0
 FECHA: 25-08-2014
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/settings_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/direction_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/direction_label"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/direction_value"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="3" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/degrees_label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degrees_label"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/location_label"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/location_value"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/degrees_label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degrees_label"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/overtaking_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/overtaking_label"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/overtaking_value"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/degrees_label3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degrees_label"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" >

        <CheckBox
            android:id="@+id/disable_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="26dp"
            android:layout_marginTop="6dp"
            android:text="@string/disable_val_label" />

        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="26dp"
            android:background="@null"
            android:src="@drawable/ic_save" />

        <ImageButton
            android:id="@+id/restore_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_restore" />
    </LinearLayout>

</RelativeLayout>